[package]
name = "presenced"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.20", features = ["full"] }
dirs = "4"
anyhow = "1"
thiserror = "1"
matrix-sdk = "0.5.0"
matrix-sdk-sled = "0.1.0"
bytes = "1.2"
rumqttc = { version = "0.14.0", features = ["default", "url"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
chrono = { version = "0.4.20", features = ["serde"] }
